# TSPFN

./: .gitignore  README.md  config.toml  pyproject.toml  ruff.toml  ruff_defaults.toml  try_print_config_train.yaml
configs/data/: prior_testing.yaml
src/tspfn/: train.py
src/tspfn/data/: __init__.py  datamodule.py  dataset.py  edge_functions.py  feature_post_processing.py  input_noise.py  prior.py  scm.py  utils.py
src/tspfn/data/edge_functions/: __init__.py  sampler.py  shallow_nn.py
src/tspfn/model/: __init__.py  full_model.py  simple_model.py
src/tspfn/model/blocks/: __init__.py  feed_forward.py  multihead_attention.py  norm.py  transformer.py
tests/data/: __init__.py  test_dataset.py  test_input_noise.py  test_prior.py  test_scm.py  test_utils.py
tests/data/configs/: prior_testing.yaml
tests/model/: test_simple_model.py
