[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tspfn"
version = "0.0.1"
description = ''
readme = "README.md"
requires-python = "==3.13.*"
keywords = []
authors = [{ name = "H. Anton", email = "anton.holmberg@live.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "jsonargparse[signatures]>=4.42.0",
    "lightning>=2.5.5",
    "networkx>=3.5",
    "pydantic>=2.11.7",
    "torch>=2.9.0",
]

[project.urls]
Documentation = "https://github.com/Antonholmbergg/TSPFN#readme"
Issues = "https://github.com/Antonholmbergg/TSPFN/issues"
Source = "https://github.com/Antonholmbergg/TSPFN"

[project.scripts]
tspfn = "tspfn.train:main"

[tool.coverage.run]
source_pkgs = ["tspfn", "tests"]
branch = true
parallel = true
omit = ["src/tspfn/__about__.py"]

[tool.coverage.paths]
tspfn = ["src/tspfn", "*/tspfn/src/tspfn"]
tests = ["tests", "*/tspfn/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "mypy>=1.17.1",
    "mypy-extensions>=1.1.0",
    "pytest>=8.4.2",
    "scipy-stubs>=1.16.1.1",
    "types-networkx>=3.5.0.20250901",
]

[tool.mypy]
python_version = 3.13
install_types=true
non_interactive=true
check_untyped_defs=true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
