[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tspfn"
version = "0.0.1"
description = ''
readme = "README.md"
requires-python = "==3.12.*"
keywords = []
authors = [{ name = "H. Anton", email = "anton.holmberg@live.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "jsonargparse[signatures]>=4.43.0",
    "lightning>=2.5.6",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "scipy>=1.16.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "triton>=3.4.0",
]

[project.urls]
Documentation = "https://github.com/Antonholmbergg/TSPFN#readme"
Issues = "https://github.com/Antonholmbergg/TSPFN/issues"
Source = "https://github.com/Antonholmbergg/TSPFN"

[project.scripts]
tspfn = "tspfn.train:main"

[tool.coverage.run]
source_pkgs = ["tspfn", "tests"]
branch = true
parallel = true
omit = ["src/tspfn/__about__.py"]

[tool.coverage.paths]
tspfn = ["src/tspfn", "*/tspfn/src/tspfn"]
tests = ["tests", "*/tspfn/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[dependency-groups]
dev = [
]

[tool.mypy]
python_version = 3.13
install_types=true
non_interactive=true
check_untyped_defs=true

[tool.uv.sources]
torch = {path = "/torch-2.8.0+rocm7.1.0.lw.git7a520360-cp312-cp312-linux_x86_64.whl"}
torchaudio = {path = "/torchaudio-2.8.0+rocm7.1.0.git6e1c7fe9-cp312-cp312-linux_x86_64.whl"}
torchvision = {path = "/torchvision-0.23.0+rocm7.1.0.git824e8c87-cp312-cp312-linux_x86_64.whl"}
triton = {path = "/triton-3.4.0+rocm7.1.0.gitf9e5bf54-cp312-cp312-linux_x86_64.whl"}
#torch = [
  #{ index = "pytorch-gpu" },
#]

#[[tool.uv.index]]
#name = "pytorch-gpu"
#url = "https://download.pytorch.org/whl/rocm6.4"
#url = "https://download.pytorch.org/whl/cpu"
#explicit = true
